--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "airtable": "^0.12.2",
-    "cors": "^2.8.5",
     "next": "^14.2.0",
-    "nextjs": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typed.js": "^2.1.0"
+    "three": "^r128",
+    "@types/three": "^r128",
+    "@react-three/fiber": "^8.13.0",
+    "@react-three/drei": "^9.88.0",
+    "@react-three/postprocessing": "^2.15.0",
+    "postprocessing": "^6.33.0",
+    "framer-motion": "^10.16.4",
+    "zustand": "^4.4.1",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "eslint": "8.9.0",
