--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.35"
   }
 }
