--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next.config.js"],
-  "exclude": ["node_modules"]
+  "include": ["app/**/*", "components/**/*", "lib/**/*", "next.config.js"],
+  "exclude": ["node_modules", ".next"]
 }
